--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
+    
+    <meta name="description" content="The ultimate Home Exchange platform for like-minded people">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <title>KazaSwap - Swap your place, explore the world</title>
