--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="The ultimate Home Exchange platform for like-minded people" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <meta property="og:image" content="%PUBLIC_URL%/assets/img/share-preview.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/assets/img/app-banner.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
